# CatsWithGlassesOpenEnv

./: .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  test_full.py  validate_openenv.py
baseline/: baseline.py
data/: generate_all.py
data/ipd/: aetna_policies.json  cigna_policies.json  cms_policies.json  united_policies.json
data/prs/: PAT-001.json  PAT-002.json  PAT-003.json  PAT-004.json  PAT-005.json  PAT-006.json  PAT-007.json  PAT-008.json  PAT-009.json  PAT-010.json  PAT-011.json  PAT-012.json  PAT-013.json  PAT-014.json  PAT-015.json  PAT-016.json  PAT-017.json  PAT-018.json  PAT-019.json  PAT-020.json  PAT-021.json  PAT-022.json  PAT-023.json  PAT-024.json  PAT-025.json  PAT-026.json  PAT-027.json  PAT-028.json  PAT-029.json  PAT-030.json  PAT-031.json  PAT-032.json  PAT-033.json  PAT-034.json  PAT-035.json  PAT-036.json  PAT-037.json  PAT-038.json  PAT-039.json  PAT-040.json  (+11 more)
environment/: engine.py  rewards.py  task1_verification.py  task2_mri_necessity.py  task3_cgm_appeal.py  task4_peer_review.py
server/: app.py  session.py  websocket.py
static/: index.html
