[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "healthcare-prior-auth-openenv"
version = "1.2.0"
description = "Patient Triage & Prior Authorization (PTPA) OpenEnv Environment"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PTPA Team"},
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["models", "tasks", "inference"]

[tool.setuptools.packages.find]
include = ["server*", "environment*", "baseline*"]
